# docubridge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ru/: doc.md
src/: main.py  reader.py  server.py
src/docs_server/: config.py  main.py  reader.py  server.py
