[project]
name = "mcp-docs-server"
version = "0.1.0"
description = "MCP server for local documentation access"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
docs-server = "docs_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"